# UpCity

./: .env  .gitignore  README.md  index.html  lkdsfjflka.txt  main.js  package.json  requirements.txt
AndroidApp/: .gitignore
AndroidApp/app/: build.gradle.kts  google-services.json
AndroidApp/gradle/: libs.versions.toml
Backend/: pyproject.toml  requirements.txt
Backend/src/: requirements.txt
Backend/src/project/: config.py  crud.py  database.py  hashing.py  jwt_handler.py  main.py  oauth2.py  token.py
Backend/src/project/api/: application.py  authentication.py  image.py  notification.py  user.py  utility_company.py
Backend/src/project/db/: database.py  models.py
Backend/src/project/repository/: application_rep.py  authentication_rep.py  email_utils.py  image_rep.py  sorting_rep.py  user_rep.py  utility_company_rep.py
Backend/src/project/schemas/: application_schemas.py  image_schemas.py  subscription_schemas.py  token_schemas.py  user.py  user_schemas.py  utility_company_schemas.py
Web/: next.config.js  package-lock.json  package.json
Web/pages/: Bin.jsx  about_us.jsx  add_kp.jsx  appeal.jsx  edit_kp.jsx  index.jsx  kp.jsx  kpEnded.jsx  kpWorking.jsx  kp_working.jsx  list_kp.jsx  list_people.jsx  pop.jsx  registration.jsx  shop.jsx
components/WebComponents/: footer.jsx  headerKp.jsx
components/page1/: MiddlePage.jsx  PageStart.jsx
components/page3/: Appeals.jsx
components/page4/: KpAppeals.jsx  KpAppealsEnded.jsx  Map.jsx
components/page5/: inwork.jsx
pages/: add_kp.jsx  kp_working.jsx  list_kp.jsx  registration.jsx
(+198 files in other folders)
